购物车右上角数量指示以及动态设置tabBar

--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "小蚂蚁餐厅",
     "navigationBarTextStyle": "black",
-    "enablePullDownRefresh": "true"
+    "enablePullDownRefresh": true
   },
   "tabBar": {
     "list": [
