个人中心及地址选择

--- a/app.json
+++ b/app.json
@@ -6,7 +6,9 @@
     "pages/info/info",
     "pages/index/index",
     "pages/logs/logs",
-    "pages/goods/goods"
+    "pages/goods/goods",
+    "pages/address/address",
+    "pages/add/add"
   ],
   "window": {
     "backgroundTextStyle": "light",
