--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "小蚂蚁餐厅",
+    "navigationBarTitleText": "农品正源",
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": false
   },
