生成订单、支付/快递方式选择及改进第二次进入小程序无法显示购物车数量问题

--- a/app.json
+++ b/app.json
@@ -14,9 +14,9 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#f55a4b",
     "navigationBarTitleText": "农品正源",
-    "navigationBarTextStyle": "black",
+    "navigationBarTextStyle": "#fff",
     "enablePullDownRefresh": false
   },
   "tabBar": {
