--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#f55a4b",
-    "navigationBarTitleText": "农品正源",
+    "navigationBarTitleText": "老友记",
     "navigationBarTextStyle": "#fff",
     "enablePullDownRefresh": false
   },
